# hazmat

./: .cabal  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  add.c  build.zig  config.mk  confile  crypto.cpp  crypto.h  db.cpp  flake.nix  hazmat.cabal  hazmat.h  hazmat.nimble  help.c  init.c  main.c  main.cpp  makefile  master.c  master_pass.cpp  master_pass.h  random.c  shred.c  stack.yaml
.stack-work/: stack.sqlite3
app/: Main.hs  MasterPass.hs
cli/: cli.cc
docs/cli/: cli.md
include/: add.h  cli.hh  crypt.hh  delete.h  entry.hh  frontend.hh  hazmat.h  help.h  help.hh  init.h  master.h  password.hh  random.h  setup.hh  show.h  shred.h  types.hh  update.h
include_old/: master.hh
libhaz/: libhaz.cc  libhaz.hh
list/: list.cc  list.hh
man/: hazmat.1
master/: master.cc  master.h  master.hh
old-c++/: crypto.cpp  db.h  master_pass.cpp  master_pass.h
password/: password.cc  password.hh
src/: add.c  app.rs  crypt.cc  crypto.rs  db.rs  delete.c  entry.cc  help.c  help.cc  init.c  list.cc  main.c  main.cc  main.rs  master.c  master.cc  master_pass.zig  password.cc  random.c  setup.cc  show.c  shred.c  tui.rs  update.c
src/backend/: crypto.rs  entry.rs  parser.rs
src/background/: parser.rs
src/frontend/: danger.rs  help.rs  initialize.rs
src_old/: cli.cc  main.cc
tests/: password_imports.suit  template.suit
