library
  hs-source-dirs:      src
  exposed-modules:     MasterPass
  build-depends:       base >= 4.7 && < 5

executable your-project-name
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hazmat
  default-language:    Haskell2024
